// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders a default state 1`] = `
<div>
  <label
    class=""
  >
    <div
      class=""
    >
      <div
        class="ms-checkbox-indicator"
      >
        <svg
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.85355 3.14645C10.0488 3.34171 10.0488 3.65829 9.85355 3.85355L5.35355 8.35355C5.15829 8.54882 4.84171 8.54882 4.64645 8.35355L2.64645 6.35355C2.45118 6.15829 2.45118 5.84171 2.64645 5.64645C2.84171 5.45118 3.15829 5.45118 3.35355 5.64645L5 7.29289L9.14645 3.14645C9.34171 2.95118 9.65829 2.95118 9.85355 3.14645Z"
          />
        </svg>
      </div>
      <input
        class=""
        id="checkbox-1"
        type="checkbox"
      />
    </div>
    Default Checkbox
  </label>
</div>
`;

exports[`Checkbox renders checked correctly 1`] = `
<div>
  <label
    class=""
  >
    <div
      class=""
    >
      <div
        class="ms-checkbox-indicator"
      >
        <svg
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.85355 3.14645C10.0488 3.34171 10.0488 3.65829 9.85355 3.85355L5.35355 8.35355C5.15829 8.54882 4.84171 8.54882 4.64645 8.35355L2.64645 6.35355C2.45118 6.15829 2.45118 5.84171 2.64645 5.64645C2.84171 5.45118 3.15829 5.45118 3.35355 5.64645L5 7.29289L9.14645 3.14645C9.34171 2.95118 9.65829 2.95118 9.85355 3.14645Z"
          />
        </svg>
      </div>
      <input
        checked=""
        class=""
        id="checkbox-1"
        type="checkbox"
      />
    </div>
    Default Checkbox
  </label>
</div>
`;

exports[`Checkbox renders mixed correctly 1`] = `
<div>
  <label
    class=""
  >
    <div
      class=""
    >
      <div
        class="ms-checkbox-indicator"
      >
        <svg
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="8"
            width="8"
            x="2"
            y="2"
          />
        </svg>
      </div>
      <input
        class=""
        id="checkbox-1"
        type="checkbox"
      />
    </div>
    Default Checkbox
  </label>
</div>
`;

exports[`Checkbox renders unchecked correctly 1`] = `
<div>
  <label
    class=""
  >
    <div
      class=""
    >
      <div
        class="ms-checkbox-indicator"
      >
        <svg
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.85355 3.14645C10.0488 3.34171 10.0488 3.65829 9.85355 3.85355L5.35355 8.35355C5.15829 8.54882 4.84171 8.54882 4.64645 8.35355L2.64645 6.35355C2.45118 6.15829 2.45118 5.84171 2.64645 5.64645C2.84171 5.45118 3.15829 5.45118 3.35355 5.64645L5 7.29289L9.14645 3.14645C9.34171 2.95118 9.65829 2.95118 9.85355 3.14645Z"
          />
        </svg>
      </div>
      <input
        class=""
        id="checkbox-1"
        type="checkbox"
      />
    </div>
    Default Checkbox
  </label>
</div>
`;
